# webxcrawler

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: codeql.yml
webxcrawler/: __main__.py  crawler.py
