[tool.poetry]
name = "webxcrawler"
version = "0.1.0"
description = "WebXCrawler is a fast static crawler to crawl a website and get all the links."
authors = ["Shivam Saraswat <thecybersapien@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
bs4 = "^0.0.1"
furl = "^2.1.3"
termcolor = "^2.2.0"
tldextract = "^3.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
