[tool.poetry]
name = "webxcrawler"
version = "1.0"
description = "WebXCrawler is a fast static crawler to crawl a website and get all the links."
authors = ["Shivam Saraswat <thecybersapien@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.1"
furl = "^2.1.3"
lxml = "^5.2.1"
requests = "^2.31.0"
termcolor = "^2.2.0"
tldextract = "^5.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
